# pathogen_sensing

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/src/: Params.cpp  Params.h  Timer.h  droplet.cpp  droplet.h  run_tumble_on_sphere.cpp  utility_functions.cpp  utility_functions.h
C++/unit_tests/: test_droplet.cpp
Data/experimental_droplet_trajectories/: trajectories_6.hdf5
Data/experimental_intensity_spectra/: exSpectraWeighted_1.h5  exSpectraWeighted_2.h5  exSpectraWeighted_5.h5  exSpectraWeighted_6.h5
Data/numerical_droplet_optics/lookup_map/: normIntegratedIntensity.mat
Data/numerical_intensity_spectra/: meanIntensitySpectrumOld.hdf5  meanIntensitySpectrumYoung.hdf5
Data/numerical_parameter_sweep/: simAnalysisData_rDroplet_3.50_u0Dim_0.10.h5  simAnalysisData_rDroplet_3.50_u0Dim_1.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_10.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_11.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_12.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_13.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_14.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_2.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_3.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_4.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_5.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_6.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_7.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_8.00.h5  simAnalysisData_rDroplet_3.50_u0Dim_9.00.h5
Data/test_dropletTilt_thetaPhi_analyticDirector_wvl_550_DnLC_0.18/: afterDropletEField_550_theta_0.000_phi_0.000.h5
Mathematica/: droplet_optics.wl  droplet_tracker.wl  figures.wl  functions.wl  run_simulations.wl
Matlab/: dropletLightProp.m  frictionCalibrationForTrackedDroplets.m  trackDroplets.m  trackMovieMaker.m
Meep/: droplet_biphase_3d.py
